--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -19,12 +19,12 @@ jobs:
           -w /workspace \
           quay.io/pypa/manylinux2014_x86_64 \
           bash -c "
-            # Use Python 3.9 from manylinux image
-            /opt/python/cp39-cp39/bin/pip install --upgrade pip
-            /opt/python/cp39-cp39/bin/pip install -r requirements.txt
+            # Use Python 3.8 from manylinux image (has shared library support)
+            /opt/python/cp38-cp38/bin/pip install --upgrade pip
+            /opt/python/cp38-cp38/bin/pip install -r requirements.txt
             
             # Build One-File Binary
-            /opt/python/cp39-cp39/bin/pyinstaller -F run_mycli.py --name mycli_linux --clean
+            /opt/python/cp38-cp38/bin/pyinstaller -F run_mycli.py --name mycli_linux --clean
           "
 
     - name: Upload Binary Artifact
