--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -20,18 +20,18 @@ jobs:
           quay.io/pypa/manylinux2014_x86_64 \
           bash -c "
             # Use Python 3.8 from manylinux image
-            /opt/python/cp38-cp38/bin/pip install --upgrade pip shiv
+            /opt/python/cp38-cp38/bin/pip install --upgrade pip pex
             
-            # Install mycli and its dependencies including importlib-metadata for Python 3.6 compatibility
+            # Install mycli and its dependencies
             /opt/python/cp38-cp38/bin/pip install mycli importlib-metadata
             
-            # Build self-contained zipapp using shiv with --site-packages to include all dependencies
-            /opt/python/cp38-cp38/bin/shiv \
-              --site-packages /opt/python/cp38-cp38/lib/python3.8/site-packages \
-              --compressed \
-              -p '/usr/bin/env python3' \
+            # Build executable using pex (better dependency handling than shiv)
+            /opt/python/cp38-cp38/bin/pex \
+              mycli \
+              importlib-metadata \
+              -c mycli \
               -o mycli_linux \
-              -e mycli.main:cli
+              --python-shebang='/usr/bin/env python3'
             
             # Make it executable
             chmod +x mycli_linux
