Fix: Use importlib-metadata<5.0 for Python 3.6 compatibility

--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -22,16 +22,17 @@ jobs:
             # Use Python 3.8 from manylinux image
             /opt/python/cp38-cp38/bin/pip install --upgrade pip pex
             
-            # Install mycli and its dependencies
-            /opt/python/cp38-cp38/bin/pip install mycli importlib-metadata
+            # Install mycli and compatible importlib-metadata for Python 3.6
+            /opt/python/cp38-cp38/bin/pip install mycli 'importlib-metadata<5.0'
             
-            # Build executable using pex (better dependency handling than shiv)
+            # Build executable using pex with Python 3.6 compatibility
             /opt/python/cp38-cp38/bin/pex \
               mycli \
-              importlib-metadata \
+              'importlib-metadata<5.0' \
               -c mycli \
               -o mycli_linux \
-              --python-shebang='/usr/bin/env python3'
+              --python-shebang='/usr/bin/env python3' \
+              --interpreter-constraint='CPython>=3.6,<4'
             
             # Make it executable
             chmod +x mycli_linux
