--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -20,19 +20,21 @@ jobs:
           quay.io/pypa/manylinux2014_x86_64 \
           bash -c "
             # Use Python 3.8 from manylinux image
-            /opt/python/cp38-cp38/bin/pip install --upgrade pip pex
+            /opt/python/cp38-cp38/bin/pip install --upgrade pip
             
-            # Install mycli and specific version of importlib-metadata for Python 3.6
-            /opt/python/cp38-cp38/bin/pip install mycli importlib-metadata==4.13.0
+            # Install mycli and dependencies to a temp directory
+            /opt/python/cp38-cp38/bin/pip install --target=/tmp/mycli_pkg mycli importlib-metadata==4.13.0
             
-            # Build executable using pex with Python 3.6 compatibility
-            /opt/python/cp38-cp38/bin/pex \
-              mycli \
-              importlib-metadata==4.13.0 \
-              -c mycli \
-              -o mycli_linux \
-              --python-shebang='/usr/bin/env python3' \
-              --interpreter-constraint='CPython>=3.6,<4'
+            # Create __main__.py entry point
+            cat > /tmp/mycli_pkg/__main__.py << 'EOF'
+#!/usr/bin/env python3
+from mycli.main import cli
+if __name__ == '__main__':
+    cli()
+EOF
+            
+            # Create zipapp using Python's built-in zipapp module
+            /opt/python/cp38-cp38/bin/python -m zipapp /tmp/mycli_pkg -o mycli_linux -p '/usr/bin/env python3'
             
             # Make it executable
             chmod +x mycli_linux
