--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -14,9 +14,11 @@ jobs:
 
     - name: Build in Manylinux Container
       run: |
-        docker run --rm \
-          -v ${{ github.workspace }}:/workspace \
-          -w /workspace \
+        # Use a consistent container name
+        CONTAINER_NAME="mycli_builder"
+        
+        # 1. Create the container (do not run yet)
+        docker create --name $CONTAINER_NAME \
           quay.io/pypa/manylinux2014_x86_64 \
           bash -c "
             # Use Python 3.8 from manylinux image
@@ -33,12 +35,24 @@ jobs:
                 cli()
             EOF
             
-            # Create zipapp using Python's built-in zipapp module
-            /opt/python/cp38-cp38/bin/python -m zipapp /tmp/mycli_pkg -o /workspace/mycli_linux -p '/usr/bin/env python3'
+            # Create zipapp using Python's built-in zipapp module. Output to /tmp inside container.
+            /opt/python/cp38-cp38/bin/python -m zipapp /tmp/mycli_pkg -o /tmp/mycli_linux -p '/usr/bin/env python3'
             
-            # Make it executable and accessible (fix permissions for GA runner)
-            chmod 777 /workspace/mycli_linux
+            # Make it executable
+            chmod +x /tmp/mycli_linux
           "
+        
+        # 2. Start the container and wait for it to finish
+        docker start -a $CONTAINER_NAME
+        
+        # 3. Copy the binary out of the container
+        docker cp $CONTAINER_NAME:/tmp/mycli_linux .
+        
+        # 4. Clean up
+        docker rm $CONTAINER_NAME
+        
+        # 5. Verify file exists
+        ls -la mycli_linux
 
     - name: Upload Binary Artifact
       uses: actions/upload-artifact@v4
