--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -27,13 +27,8 @@ jobs:
             # Install mycli and dependencies to a temp directory
             /opt/python/cp38-cp38/bin/pip install --target=/tmp/mycli_pkg mycli importlib-metadata==4.13.0
             
-            # Create __main__.py entry point
-            cat > /tmp/mycli_pkg/__main__.py << 'EOF'
-            #!/usr/bin/env python3
-            from mycli.main import cli
-            if __name__ == '__main__':
-                cli()
-            EOF
+            # Create __main__.py entry point using printf to avoid heredoc issues
+            printf "#!/usr/bin/env python3\nfrom mycli.main import cli\nif __name__ == '__main__':\n    cli()\n" > /tmp/mycli_pkg/__main__.py
             
             # Create zipapp using Python's built-in zipapp module. Output to /tmp inside container.
             /opt/python/cp38-cp38/bin/python -m zipapp /tmp/mycli_pkg -o /tmp/mycli_linux -p '/usr/bin/env python3'
