Fix: Downgrade dependencies for strict Python 3.6 compatibility (zipp 3.6.0)

--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -27,8 +27,9 @@ jobs:
             /opt/python/cp38-cp38/bin/pip install --upgrade pip
             
             # Install dependencies first (excluding mycli)
-            # Ensure importlib-metadata is installed for the backport
-            /opt/python/cp38-cp38/bin/pip install --target=/tmp/mycli_pkg 'importlib-metadata==4.13.0' cryptography configobj sqlglot
+            # importlib-metadata 4.8.3 is the LAST version to support Python 3.6
+            # zipp 3.6.0 is compatible with Python 3.6
+            /opt/python/cp38-cp38/bin/pip install --target=/tmp/mycli_pkg 'importlib-metadata==4.8.3' 'zipp==3.6.0' cryptography configobj sqlglot
             # Install other potential dependencies usually pulled by mycli
             /opt/python/cp38-cp38/bin/pip install --target=/tmp/mycli_pkg cli_helpers click configobj prompt_toolkit pygments sqlparse
             
